# rules-performance-tests

./: .example.ftw.yaml  .gitignore  MEETING_NOTE.md  README.md  init.sh  pyproject.toml
.github/workflows/: performance_test.yml  pipeline_demo.yml
config/: cAdvisor.threshold.json  ftw.threshold.json
src/: collect.py  report.py
src/model/: CAdvisorUtil.py  CollectCommandArg.py  FTWUtil.py  LocustUtil.py  ReportCommandArg.py  Util.py  __init__.py
src/test/: collect_test.py  report_test.py
src/type/: Mode.py  ReportFormat.py  State.py  UtilType.py  __init__.py
src/utils/: __init__.py  logger.py
