[tool.poetry]
name = "crs-performance"
version = "0.1.0"
description = "GSoC 2023 - CRS Performance"
authors = ["dextermallo <dextermallo@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
docker = "^6.1.3"
requests = "^2.31.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
locust = "^2.15.1"
pyyaml = "^6.0"
ping3 = "^4.0.4"
termcolor = "^2.3.0"
urllib3 = "<2.0"
asciichartpy = "^1.5.25"
numpy = "^1.25.1"
astropy = "^5.3.1"
python-dateutil = "^2.8.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [".", "./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
collect = 'src.collect:main'
report = 'src.report:main'