[project]
name = "crs-performance"
version = "0.1.0"
description = "GSoC 2023 - CRS Performance"
authors = [{name = "dextermallo", email = "dextermallo@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "docker>=6.1.3",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "locust>=2.15.1",
    "pyyaml>=6.0",
    "ping3>=4.0.4",
    "termcolor>=2.3.0",
    "urllib3<2.0",
    "asciichartpy>=1.5.25",
    "numpy>=1.25.1",
    "astropy>=7.0.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
collect = "src.collect:main"
report = "src.report:main"

[tool.poetry]
packages = [{include = "src"}]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = [".", "./src"]
testpaths = ["src/test"]
norecursedirs = ["tmp", "data", "report", ".git", ".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"